<resources>
    <string name="app_name">AedesMap</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_google_maps">Mapa</string>
    <string name="google_maps_apiv2" translatable="false">AIzaSyDiPxSvoUUXY1icVSTEaUdBvkrTFywh0Kc</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
    <string name="camera_icon">icone da câmera</string>
    <string name="aedesmap_icon">Icone do AedesMap</string>
    <string name="aedesmap_menu">Menu do AedesMap</string>
    <string name="title_insertPosition">Inserir Posição</string>
    <string name="title_openMap">Abrir Mapa</string>
    <string name="title_getPosition">Pegar Posição</string>
    <string name="actionBarSettings">Configurações</string>
    <string name="aedesmap" translatable="false">AedesMap</string>
    <string name="infoText1">O aplicativo colaborativo para registrar e compartilhar possíveis criadouros do Aedes aegypti.</string>
    <string name="image_info" translatable="false">image info</string>
    <string name="infoText2">O Aedes aegypti é capaz de se proliferar em qualquer lugar com água limpa e parada. Alguns dos possíveis focos de proliferação aos quais você deve prestar atenção são:</string>
    <string name="infoText3">- Pneu Velho</string>
    <string name="infoText4">- Vasos de planta</string>
    <string name="infoText5">- Garrafas vazias</string>
    <string name="infoText6">- Piscinas descobertas</string>
    <string name="infoText7">- Lixeiras</string>
    <string name="image_info_2" translatable="false">image info 2</string>
    <string name="infoText8">3 passos simples para combater o Aedes aegypti:</string>
    <string name="infoText9">1. Baixe o AedesMap</string>
    <string name="infoText10">2. Registre qualquer foco do mosquito que você encontrar</string>
    <string name="infoText11">3. Veja no mapa os registros de outros usuários</string>
    <string name="title_info">Infomações</string>
    <string name="positionSaved">Ponto salvo!</string>
    <string name="positionNotsaved">Ponto não salvo!</string>
    <string name="wrongGPSValue">Valor de GPS errado!</string>
    <string name="noGPSSignal">Ainda sem sinal!</string>
    <string name="imageSaved">Imagem salva!</string>
    <string name="imageNotSaved">Imagem não foi salva!</string>
    <string name="cameraWarning">Espere o sinal do GPS!</string>
    <string name="imageCanceled">Foto cancelada</string>

    <string name="gpsWarning2">Alerta!</string>
    <string name="gpsWarning3">Ative o GPS antes de usar!</string>
    <string name="title_graph">Dados</string>
    <string name="findGPS">Procurando Posição...</string>
    <string name="occurrence">Ocorrências</string>
    <string name="title_activity_graph_acitivity">Dados</string>
    <string name="graphTitle">Série histórica</string>
    <string name="title_activity_maps">Map</string>

</resources>
