<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
       <!-- <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/title_insertPosition"/>-->
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_mapa"
            android:title="@string/title_openMap" />

        <item
            android:id="@+id/nav_getPos"
            android:icon="@drawable/ic_insert"
            android:title="@string/title_getPosition" />

        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/title_info" />

        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_graph"
            android:title="@string/title_graph" />

    </group>


</menu>
