<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.aedesmap.InfoActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aedesmap"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal"
                        android:textSize="50sp"
                        android:textColor="#26515e" />

                    <TextView
                        android:layout_width="385sp"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText1"
                        android:id="@+id/textView2"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="26sp"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:textAlignment="center" />

                    <ImageView
                        android:layout_width="371sp"
                        android:layout_height="381sp"
                        android:id="@+id/imageView2"
                        android:src="@drawable/info1"
                        android:contentDescription="@string/image_info" />

                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView2" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="375sp"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText2"
                        android:id="@+id/textView3"
                        android:textSize="26sp"
                        android:textColor="#26515e" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText3"
                        android:id="@+id/textView4"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:paddingTop="5sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText4"
                        android:id="@+id/textView5"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:paddingTop="5sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText5"
                        android:id="@+id/textView6"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:paddingTop="5sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText6"
                        android:id="@+id/textView7"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:paddingTop="5sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText7"
                        android:id="@+id/textView8"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:paddingTop="5sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:src="@drawable/info2"
                        android:contentDescription="@string/image_info_2" />

                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView3" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="385sp"
                        android:layout_height="wrap_content"
                        android:text="@string/infoText8"
                        android:id="@+id/textView"
                        android:textSize="26sp"
                        android:textColor="#26515e"
                        android:paddingBottom="26sp" />

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tableLayout">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="26sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/infoText9"
                                android:id="@+id/textView9"
                                android:layout_below="@+id/tableLayout"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:textSize="20sp"
                                android:textColor="#26515e" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView2"
                                android:layout_column="1"
                                android:src="@drawable/info3"
                                android:layout_span="16" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="100sp"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView3"
                                android:layout_column="0"
                                android:src="@drawable/info2" />

                            <TextView
                                android:layout_width="200sp"
                                android:layout_height="wrap_content"
                                android:text="@string/infoText10"
                                android:id="@+id/textView2"
                                android:layout_below="@+id/tableLayout"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:textSize="20sp"
                                android:textColor="#26515e" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="26sp" >

                            <TextView
                                android:layout_width="100sp"
                                android:layout_height="wrap_content"
                                android:text="@string/infoText11"
                                android:id="@+id/textView3"
                                android:layout_below="@+id/tableLayout"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:textSize="20sp"
                                android:textColor="#26515e" />

                            <ImageView
                                android:layout_width="200sp"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView4"
                                android:layout_column="1"
                                android:src="@drawable/info4"
                                android:layout_span="16" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>
